@@ -1,3 +1,9 @@
+2010-02-12  Abel Cheung  <abelcheung@gmail.com>
+
+	* scorerender-admin.php:
+	- (scorerender_admin_add_js) Rename to scorerender_admin_head().
+	- Add help icon next to admin page header, and make help text foldable.
+
 2010-02-11  Abel Cheung  <abelcheung@gmail.com>
 
 	* scorerender-admin.php:
